# logseq-utils

./: pyproject.toml
logseq_utils/: normalize_journal_refs.py
